<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsideBioBook">

    <androidx.appcompat.widget.Toolbar

        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_200"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/toolbar">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal"
                android:weightSum="6">

                <ImageView
                    android:id="@+id/firstimg"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3.6">

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="1dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/name"
                        android:textColor="?android:attr/textColorPrimary"                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginStart="1dp" />

                    <TextView
                        android:id="@+id/name2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/name"
                        android:layout_marginTop="10dp"
                        android:text="@string/name2"
                        android:textColor="?android:attr/textColorPrimary"                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/name2"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold"

                        android:text="@string/price"
                        android:textColor="?android:attr/textColorPrimary"                        android:textSize="16sp" />

                </RelativeLayout>


                <TextView
                    android:id="@+id/rating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="5dp"

                    android:layout_weight="0.9"
                    android:text="@string/_4_5"
                    android:textColor="#ffa500"
                    android:textSize="15sp"
                    app:drawableLeftCompat="@drawable/fav"
                    app:drawableTint="#ffa500" />


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linear"
                android:layout_marginTop="6dp">

                <TextView
                    android:id="@+id/desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/description"
                    android:textColor="?android:attr/textColorPrimary"                    android:textSize="20sp"
                    android:textStyle="bold" />

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/desc"
    app:cardCornerRadius="5dp"
    android:layout_marginBottom="-30dp"
    android:layout_margin="5dp"
    >
                <TextView
                    android:id="@+id/data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/desc"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="37dp"

                    android:text="@string/data"
                    android:textColor="?android:attr/textColorPrimary"                    android:textSize="20sp" />
</androidx.cardview.widget.CardView>

            </RelativeLayout>



        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-5.6dp"
        android:backgroundTint="@color/purple_200"
        android:text="@string/add_to_fvaourites"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />


    <RelativeLayout
        android:id="@+id/progressb"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/windowBackground">

        <ProgressBar

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />
    </RelativeLayout>

</RelativeLayout>

